--- a/projects.html
+++ b/projects.html
@@ -56,10 +56,19 @@
           <p class="type-on-open">It is the easiest problem set of cs50. I didnt implement any programm but became familiar with the operations related to SQLite3 by solving fun problems.</p>
         </details>
         <details>
-          <summary>Pset8: Web(doing it now, on 17.08.2025)</summary>
+          <summary>Pset8: Web</summary>
           <p class="type-on-open">Implemented a small webpage that can conduct question and answer operations</p>
           <p class="type-on-open">Implemented my own homepage (Which is this website!)</p>
         </details>
+        <details>
+          <summary>Pset9: Flask</summary>
+          <p class="type-on-open">Implemented a webpage that simulate the trade in stock market</p>
+        </details>
+        <details>
+          <summary>CS50 Final Project: Youtube Interest Profiler</summary>
+          <p class="type-on-open">Implemented a program that takes in an API key of Youtube data v3 API and an HTML file(downloaded from Youtube watch history or Google Takeout) and outputs a user profile.</p>
+        </details>
+        
     </article>
     <section class="extra-info">
     <p style="font-style: italic">Some of my other information (or go back to homepage)</p>
