--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
     <main role="main" class="intro">
     <article>
         <h2 style="font-style: italic; color: #606060">I started programming on 12.07.2025</h2>
-        <p>And until 17.08, i finished almost 8 problems sets from cs50.</p>
+        <p>Finished CS50 at 18.09</p>
         <details>
           <summary>Pset0: Scratch</summary>
           <p class="type-on-open">Implemented a mini-game in Scratch, where the player controls a bat, has to avoid a griffin, and eat apples.</p>
